# athena-mind-opensource

./: .env  .gitignore  README.md  docker-compose.yml
data/: config.json
data/web_account/data/: all_data.jsonl
data/web_account/prompt/: qa_prompt.txt  query_generation_prompt.txt  (+1 more)
deployments/: docker-compose-jaeger.yml  docker-compose-kafka.yml  docker-compose-mongo.yml  docker-compose-opensearch.yml
scripts/data-prep/: .env  Dockerfile  docker-compose.yml  requirements.txt
scripts/kafka/: kafka_topic.json  kafka_topic_init.sh
services/adapter/: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  makefile  requirements.txt
services/adapter/lib/mq_client/: .gitignore  pyproject.toml  requirements.txt
services/adapter/lib/mq_client/src/: sandbox.py
services/adapter/lib/mq_client/src/db/: factory.py
services/adapter/lib/mq_client/src/db/common/: provider.py
services/adapter/lib/mq_client/src/db/dict/: __init__.py  db.py
services/adapter/lib/mq_client/src/mq/common/: __init__.py  dto.py  setup.py
services/adapter/lib/mq_client/src/mq/kafka/: __init__.py  mq_producer.py
services/adapter/lib/mq_client/src/mq_client.egg-info/: PKG-INFO  SOURCES.txt
services/adapter/lib/mq_client/src/util/: asyncio.py  id.py
services/llm/: .env  Dockerfile  README.md  docker-compose.yml  makefile  requirements.txt
services/nlu/: .dockerignore  .env  Dockerfile  README.md  chainlit.md  docker-compose.yml  makefile  requirements-dev.txt  requirements.txt
services/vector/: .dockerignore  .env  README.md  docker-compose.yml  makefile  requirements.txt
(+178 files in other folders)
