[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mq_client"
version = "0.1.0"
requires-python = ">=3.10"
description = "Message queue client"
dependencies = [
    "confluent-kafka==2.3.0",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "aioredis==2.0.1",
]